Mobile viewheight fix

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Load the stylesheet. -->
-	<link href="css/exodus.css" rel="stylesheet">
+	<link href="css/exodus.min.css" rel="stylesheet">
 
 	<!-- Title -->
 	<title>Exodus</title>
 
+	<!-- EXODUS LANDING PAGE | @version 1.0.0 | @author Vantage Design | @license https://github.com/vantagedesign/exodus-landing-page/blob/master/LICENSE -->
+
 </head>
 <body>
 
-	<div class="fss-container" id="fss-container"></div>
 
-	<div class="hero-wrapper vh-100 d-flex flex-column">
+	<div class="hero-wrapper vh-100 d-flex flex-column position-relative">
 		
-		<!-- Opaque navbar -->
+		<div class="fss-container" id="fss-container"></div>
+		
+		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark">
 		    <div class="container">
 		        <div>
