--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 		<div class="fss-container" id="fss-container"></div>
 		
 		<!-- Navbar -->
-		<nav class="navbar navbar-expand-lg navbar-dark">
+		<nav class="navbar navbar-expand-lg navbar-dark navbar-transparent bg-dark shadow-sm">
 		    <div class="container">
 		        <div>
 		            <a class="navbar-brand" href="#">Exodus</a>
@@ -36,11 +36,14 @@
 		            	<li class="nav-item mb-2 mr-2">
 		            	    <a class="nav-link" href="https://vantage-design.com" target="_blank">More products</a>
 		            	</li>
-		                <li class="nav-item mb-2 mr-3">
+		                <li class="nav-item">
 		                    <a class="nav-link" href="https://docs.vantage-design.com/exodus" target="_blank">Docs</a>
 		                </li>
+		                <li class="nav-item mb-2 mr-3">
+		                	<a class="nav-link" href="https://github.com/vantagedesign/exodus-landing-page" target="_blank"><i data-feather="github"></i></a>
+		                </li>
 		                <li class="nav-item">
-		                    <a class="btn btn-primary" href="https://github.com/vantagedesign/exodus-landing-page" target="_blank">Download</a>
+		                    <a class="btn btn-primary" href="https://github.com/vantagedesign/exodus-landing-page/releases" target="_blank">Download</a>
 		                </li>
 		            </ul>
 		        </div>
@@ -111,7 +114,7 @@
 			<div class="row py-3 mb-5 justify-content-center">
 
 				<div class="col-md-4 mt-4">
-					<div class="card text-center border-primary">
+					<div class="card text-center border-0">
 						<div class="card-img-top mx-auto">
 							<img src="img/demo-article-1.jpg" alt="" class="img-fluid">
 						</div>
@@ -131,7 +134,7 @@
 				</div>
 
 				<div class="col-md-4 mt-4">
-					<div class="card text-center border-primary h-100">
+					<div class="card text-center border-0 h-100">
 						<div class="card-img-top mx-auto">
 							<img src="img/demo-article-2.jpg" alt="" class="img-fluid">
 						</div>
@@ -151,7 +154,7 @@
 				</div>
 
 				<div class="col-md-4 mt-4">
-					<div class="card text-center border-primary h-100">
+					<div class="card text-center border-0 h-100">
 						<div class="card-img-top mx-auto">
 							<img src="img/demo-article-3.jpg" alt="" class="img-fluid">
 						</div>
@@ -212,6 +215,7 @@
 			            <p class="lead mt-3 mb-0">Or follow us on:</p>
 			            <a href="https://www.facebook.com/vantagedesignofficial/" target="_blank" class="btn text-white m-1"><i data-feather="facebook"></i></a>
 			            <a href="https://www.instagram.com/vantagedesignofficial/" target="_blank" class="btn text-white m-1"><i data-feather="instagram"></i></a>
+			            <a href="https://github.com/vantagedesign" target="_blank" class="btn text-white m-1"><i data-feather="github"></i></a>
 			        </div>
 
 			        <h6 class="mt-2 text-center">
