--- a/src/index.html
+++ b/src/index.html
@@ -195,18 +195,14 @@
 
 			        <div class="card bg-dark">
 			            <div class="card-body pb-0">
-			                <div class="row no-gutters">
-			                    <div class="col-9">
-			                        <div class="form-group">
-			                            <input type="email" placeholder="Email address" class="form-control" id="inputDefault1">
-			                            <!--<small class="form-text text-muted">By signing up you agree to our privacy policy.</small>-->
-			                        </div>
-			                    </div>
-			                    <div class="col-3">
-			                        <button class="btn btn-block btn-primary ml-1 text-dark">
-			                            Sign up
-			                        </button>
-			                    </div>
+			                <div class="d-flex align-items-start">
+		                        <div class="form-group flex-grow-1">
+		                            <input type="email" placeholder="Email address" class="form-control" id="inputDefault1">
+		                            <!--<small class="form-text text-muted">By signing up you agree to our privacy policy.</small>-->
+		                        </div>
+		                        <button class="btn btn-primary ml-1 text-dark flex-shrink-0">
+		                            Sign up
+		                        </button>
 			                </div>
 			            </div>
 			        </div>
